Fix: ItemServiceImplTest